--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-materialize": "^1.1.2",
+    "react-parallax": "^1.6.0",
     "react-scripts": "1.1.0"
   },
   "scripts": {
